Mejora de la apariencia de la gráfica y coles de lo s cursos de prácticas

--- a/Admision-sim/src/app/components/user/practicas/practicas.component.html
+++ b/Admision-sim/src/app/components/user/practicas/practicas.component.html
@@ -7,8 +7,9 @@
         <div class="row text-center">
             <p>Estimado usuario, en este módulo puedes pulir tus habillidades individuales de todos los cursos.</p>
             <div class="col-12 col-sm-3 mb-3">
-                <div class="card" [routerLink]="['/usuario/practicas/algebra']" style="cursor: pointer;">
-                    <div class="card-body">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/algebra']" 
+                    style="cursor: pointer; background-color: rgb(212, 255, 237);">
+                    <div class="card-body" style="color: rgb(0, 205, 123);">
                         <h4 class="card-title fw-bold">Álgebra</h4>
                         <hr>
                         <h1 class="card-text"><i class="bi bi-superscript"></i></h1>
@@ -17,8 +18,9 @@
             </div>
 
             <div class="col-12 col-sm-3 mb-3">
-                <div class="card" [routerLink]="['/usuario/practicas/anatomia']" style="cursor: pointer;">
-                    <div class="card-body">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(255, 219, 219);">
+                    <div class="card-body" style="color: rgb(255, 67, 73);">
                         <h4 class="card-title fw-bold">Anatomía</h4>
                         <hr>
                         <h1 class="card-text"><i class="bi bi-lungs"></i></h1>
