--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -33,8 +33,8 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body row">
-                        <div class="card my-2">
-                            <p class="text-center fs-5 py-2">Prácticas de Álgebra</p>
+                        <div class="card border-0 my-2" style="background-color: rgb(212, 255, 237);">
+                            <p class="text-center fw-bold fs-5 py-2" style="color: rgb(0, 205, 123);">Prácticas de Álgebra</p>
                             <div class="card-body">
                                 <div class="row">
                                         <canvas id="MyChart"></canvas>
