Módulo de prácticas de anatomía completo

--- a/Admision-sim/src/app/components/admin/cursos/algebra/create-algebra/create-algebra.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/algebra/create-algebra/create-algebra.component.html
@@ -121,7 +121,7 @@
                             <div class="col-12 col-sm-6 mt-2 mt-sm-0">
                                 <div class="mb-3">
                                     <label for="solucionario" class="form-label text-black-50 fw-bold">SOLUCIONARIO</label>
-                                    <tinymce id="solucionario" placeholder="Ingrese la solucionario" name="solucionario"
+                                    <tinymce id="solucionario" placeholder="Ingrese la solución" name="solucionario"
                                         [(ngModel)]="pregunta.solucionario">
                                     </tinymce>
                                 </div>
