--- a/Admision-sim/src/app/components/admin/usuarios/edit-usuario/edit-usuario.component.html
+++ b/Admision-sim/src/app/components/admin/usuarios/edit-usuario/edit-usuario.component.html
@@ -6,10 +6,10 @@
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
         <h3 class="card-header fw-bold text-center text-muted">
-            Registro de usuarios
+            Actualización de usuarios
         </h3>
         <h6 class="card-header text-center">
-            Este módulo permite la creación de usuarios
+            Este módulo permite la actualización de usuarios
         </h6>
         <div class="card-body">
             <div class="d-flex justify-content-center m-3">
