--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -41,11 +41,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card my-2">
-                            <p class="text-center fs-5 py-2">Prácticas de Anatomía</p>
+                        <div class="card border-0 my-2" style="background-color: rgb(255, 219, 219);">
+                            <p class="text-center fw-bold fs-5 py-2" style="color: rgb(255, 67, 73);">Prácticas de Anatomía</p>
                             <div class="card-body">
                                 <div class="row">
-                                        <canvas id="MyChart"></canvas>
+                                        <canvas id="MyChartAn"></canvas>
                                 </div>
                             </div>
                         </div>
