--- a/Admision-sim/src/app/components/admin/cursos/algebra/edit-algebra/edit-algebra.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/algebra/edit-algebra/edit-algebra.component.html
@@ -5,7 +5,7 @@
 
     <div class="card shadow mt-4" style="border-color: #F8F8F8;">
         <h3 class="card-header fw-bold text-center text-muted">
-            Agregar preguntas de Álgebra
+            Actualizar pregunta de Álgebra
         </h3>
         <div class="card-body">
             <div class="d-flex justify-content-center m-3">
@@ -143,5 +143,3 @@
         </div>
     </div>
 </div>
-
-<p>create-algebra works!</p>
