--- a/Admision-sim/src/app/components/admin/cursos/anatomia/create-anatomia/create-anatomia.component.html
+++ b/Admision-sim/src/app/components/admin/cursos/anatomia/create-anatomia/create-anatomia.component.html
@@ -121,7 +121,7 @@
                             <div class="col-12 col-sm-6 mt-2 mt-sm-0">
                                 <div class="mb-3">
                                     <label for="solucionario" class="form-label text-black-50 fw-bold">SOLUCIONARIO</label>
-                                    <tinymce id="solucionario" placeholder="Ingrese la solucionario" name="solucionario"
+                                    <tinymce id="solucionario" placeholder="Ingrese la solución" name="solucionario"
                                         [(ngModel)]="pregunta.solucionario">
                                     </tinymce>
                                 </div>
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="card-footer text-center">
-            <a title="Volver a Álgebra" class="text-success fs-2" [routerLink]="['/admin/algebra']"><i
+            <a title="Volver a Álgebra" class="text-success fs-2" [routerLink]="['/admin/anatomia']"><i
                     class="bi bi-arrow-left-square-fill"></i></a>
         </div>
     </div>
