--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -33,7 +33,14 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body row">
-                        <div class="card border-0 my-2" style="background-color: rgb(212, 255, 237);">
+                        <ng-container *ngIf="load_data_alg">
+                            <div class="text-center">
+                                <div class="spinner-grow text-secondary my-3" role="status">
+                                    <span class="visually-hidden">Loading...</span>
+                                </div>
+                            </div>
+                        </ng-container>
+                        <div  class="card border-0 my-2" style="background-color: rgb(212, 255, 237);">
                             <p class="text-center fw-bold fs-5 py-2" style="color: rgb(0, 205, 123);">Prácticas de Álgebra</p>
                             <div class="card-body">
                                 <div class="row">
@@ -57,5 +64,3 @@
 
     </div>
 </div>
-
-<p>historial works!</p>
