--- a/Admision-sim/src/app/components/user/practicas/practicas.component.html
+++ b/Admision-sim/src/app/components/user/practicas/practicas.component.html
@@ -6,6 +6,8 @@
         <!-- Álgebra -->
         <div class="row text-center">
             <p>Estimado usuario, en este módulo puedes pulir tus habillidades individuales de todos los cursos.</p>
+
+            <!-- Álgebra -->
             <div class="col-12 col-sm-3 mb-3">
                 <div class="card border-0" [routerLink]="['/usuario/practicas/algebra']" 
                     style="cursor: pointer; background-color: rgb(212, 255, 237);">
@@ -17,6 +19,7 @@
                 </div>
             </div>
 
+            <!-- Anatomía -->
             <div class="col-12 col-sm-3 mb-3">
                 <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
                     style="cursor: pointer; background-color: rgb(255, 219, 219);">
@@ -24,6 +27,186 @@
                         <h4 class="card-title fw-bold">Anatomía</h4>
                         <hr>
                         <h1 class="card-text"><i class="bi bi-lungs"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Aritmética -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(219, 253, 255);">
+                    <div class="card-body" style="color: rgb(20, 211, 221);">
+                        <h4 class="card-title fw-bold">Aritmética</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-plus-slash-minus"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Biología -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(220, 255, 219);">
+                    <div class="card-body" style="color: rgb(13, 186, 7);">
+                        <h4 class="card-title fw-bold">Biología</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-bug"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Economía -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(255, 245, 219);">
+                    <div class="card-body" style="color: rgb(239, 180, 32);">
+                        <h4 class="card-title fw-bold">Economía</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-currency-euro"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Educación Cívica -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(247, 219, 255);">
+                    <div class="card-body" style="color: rgb(203, 33, 251);">
+                        <h4 class="card-title fw-bold">Educación Cívica</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-bank"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Física -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(255, 232, 219);">
+                    <div class="card-body" style="color: rgb(255, 109, 24);">
+                        <h4 class="card-title fw-bold">Física</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-arrows-collapse"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Geografía -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(205, 205, 205);">
+                    <div class="card-body" style="color: rgb(63, 63, 63);">
+                        <h4 class="card-title fw-bold">Geografía</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-globe-americas"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Geometría -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(219, 228, 255);">
+                    <div class="card-body" style="color: rgb(38, 92, 255);">
+                        <h4 class="card-title fw-bold">Geometría</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-bezier"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Historia del Perú -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(224, 207, 196);">
+                    <div class="card-body" style="color: rgb(175, 80, 16);">
+                        <h4 class="card-title fw-bold">Historia del Perú</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-flag"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Historia Universal -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(84, 84, 84);">
+                    <div class="card-body" style="color: rgb(255, 255, 255);">
+                        <h4 class="card-title fw-bold">Historia Universal</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-fire"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Lenguaje -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(219, 255, 245);">
+                    <div class="card-body" style="color: rgb(4, 214, 154);">
+                        <h4 class="card-title fw-bold">Lenguaje</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-chat-square-quote"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Literatura -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(253, 219, 255);">
+                    <div class="card-body" style="color: rgb(226, 48, 190);">
+                        <h4 class="card-title fw-bold">Literatura</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-vector-pen"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Química -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(236, 236, 236);">
+                    <div class="card-body" style="color: rgb(0, 217, 90);">
+                        <h4 class="card-title fw-bold">Química</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-hexagon"></i></h1>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Razonamiento Matemático -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(255, 242, 245);">
+                    <div class="card-body" style="color: rgb(255, 84, 124);">
+                        <h4 class="card-title fw-bold">Raz. Matemático</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-columns-gap"></i></h1>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Raz. Verbal -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(233, 255, 249);">
+                    <div class="card-body" style="color: rgb(27, 196, 128);">
+                        <h4 class="card-title fw-bold">Raz. Verbal</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-quote"></i></h1>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Trigonometría -->
+            <div class="col-12 col-sm-3 mb-3">
+                <div class="card border-0" [routerLink]="['/usuario/practicas/anatomia']" 
+                    style="cursor: pointer; background-color: rgb(238, 255, 226);">
+                    <div class="card-body" style="color: rgb(64, 196, 27);">
+                        <h4 class="card-title fw-bold">Trigonometría</h4>
+                        <hr>
+                        <h1 class="card-text"><i class="bi bi-triangle"></i></h1>
                     </div>
                 </div>
             </div>
