--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -70,6 +70,16 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Biología -->
+                        <div class="card border-0 my-2" style="background-color: rgb(220, 255, 219);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(13, 186, 7);">Prácticas de Biología</p>
+                            <div class="card-body">
+                                <div class="row">
+                                        <canvas id="MyChartBio"></canvas>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
