USER - Historial trigonometria

--- a/Admision-sim/src/app/components/user/historial/historial.component.html
+++ b/Admision-sim/src/app/components/user/historial/historial.component.html
@@ -80,6 +80,16 @@
                                 </div>
                             </div>
                         </div>
+
+                         <!-- Trigonometría -->
+                         <div class="card border-0 my-2" style="background-color: rgb(238, 255, 226);">
+                            <p class="text-center fw-bold fs-5 pt-2" style="color: rgb(64, 196, 27);">Prácticas de Trigonometría</p>
+                            <div class="card-body">
+                                <div class="row">
+                                        <canvas id="MyChartTrigo"></canvas>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
